--- a/factorial viper protocols/Base.lproj/Main.storyboard
+++ b/factorial viper protocols/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,66 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="main" id="BYZ-38-t0r" customClass="ViewController" customModule="factorial_viper_protocols" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fBf-iq-sdA">
+                                <rect key="frame" x="112.5" y="293.5" width="150" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="YUp-TJ-Fz0"/>
+                                    <constraint firstAttribute="width" constant="150" id="rkb-LH-9mN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xcn-Zk-exg">
+                                <rect key="frame" x="149.5" y="243.5" width="76" height="30"/>
+                                <state key="normal" title="Посчитать"/>
+                                <connections>
+                                    <action selector="calculateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9fa-9e-caO"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите число" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RyG-Lu-VkC">
+                                <rect key="frame" x="112.5" y="193.5" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="B8m-Up-siJ"/>
+                                    <constraint firstAttribute="height" constant="30" id="Jyv-6m-qvI"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Факториал" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bya-eQ-W9u">
+                                <rect key="frame" x="143.5" y="152.5" width="88" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fBf-iq-sdA" firstAttribute="top" secondItem="Xcn-Zk-exg" secondAttribute="bottom" constant="20" id="KE2-U4-NO0"/>
+                            <constraint firstItem="fBf-iq-sdA" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="PAe-O6-mVy"/>
+                            <constraint firstItem="Xcn-Zk-exg" firstAttribute="top" secondItem="RyG-Lu-VkC" secondAttribute="bottom" constant="20" id="WZD-eM-SWe"/>
+                            <constraint firstItem="RyG-Lu-VkC" firstAttribute="top" secondItem="bya-eQ-W9u" secondAttribute="bottom" constant="20" id="bMU-qu-xGm"/>
+                            <constraint firstItem="fBf-iq-sdA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="doY-RP-Sv1"/>
+                            <constraint firstItem="RyG-Lu-VkC" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jkO-EV-61w"/>
+                            <constraint firstItem="bya-eQ-W9u" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="pIE-bM-A9c"/>
+                            <constraint firstItem="Xcn-Zk-exg" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="xkD-Fa-3BN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="inputNumberTextField" destination="RyG-Lu-VkC" id="1AC-Xh-AKN"/>
+                        <outlet property="resultLabel" destination="fBf-iq-sdA" id="u9Y-lX-vjL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
